--- a/cst126_blog/register.html
+++ b/cst126_blog/register.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+    CST-126 Blog Project 1.0
+    Module - Registration Page v1.0
+    Jackie Adair
+    7 April 2019
+    HTML for the registration page for this blog.
+-->
+
 <html>
     <head>
         <title>CST126 Blog Project</title>
