--- a/activity2/index.html
+++ b/activity2/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CST126 Blog Project</title>
+        <title>My Activity 2 Application</title>
     </head>
     <body>
-        <h2>PHP Blog</h2>
+        <h2>My Activity 2 Application</h2>
         <a href="login.html">Login</a>
         <a href="register.html">Register</a>
 
