--- a/activity2/register.html
+++ b/activity2/register.html
@@ -5,29 +5,30 @@
 	</head>
 	<body>
 		<h1>Register</h1>
-		<form action="pageHandler.php" method="POST">
+		<form action="registerHandler.php" method="POST">
 			<table>
 				<tr>
-					<td>
-						First Name
-					</td>
-					<td>
-						<input type="text" name="fname">
-					</td>
+					<td>First Name: </td>
+					<td><input type="text" name="userFirst"></td>
+				</tr>
+					<td>Last Name: </td>
+					<td><input type="text" name="userLast"></td>
 				</tr>
 				<tr>
-					<td>
-						Last Name
-					</td>
-					<td>
-						<input type="text" name="lname">
-					</td>
+					<td>UserName: </td>
+					<td><input type="text" name="userName"></td>
+				</tr>
+				<tr>
+					<td>Password: </td>
+					<td><input type="password" name="userPass"></td>
 				</tr>
 				<tr><td colspan="2"> </td></tr>
 				<tr>
-				<td colspan="2" align="center">
-					<input type="submit" value="submit">
-				</td>
+				<td colspan="2" align="center"><input type="submit" value="submit"></td>
+				</tr>
+				<tr>
+					<td colspan="2" align="center"><a href="index.html">Main Menu</a></td>
+				</tr>
 			</table>
 		</form>
 	</body>
