--- a/cst126_blog/register.html
+++ b/cst126_blog/register.html
@@ -1,46 +1,54 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <!--
     CST-126 Blog Project 1.0
-    Module - Registration Page v1.0
+    Module - Registration Page v2.0
     Jackie Adair
-    7 April 2019
+    14 April 2019
     HTML for the registration page for this blog.
 -->
 
 <html>
-    <head>
-        <title>CST126 Blog Project</title>
-    </head>
-    <style type="text/css">
-        div {
-            margin: auto;
-            width: 35%;
-            border: 1px solid blue;
-            border-radius: 25px;
-            padding: 10px;
-        }
-    </style>
-    <body>
-        <div>
-            <form action="processRegistration.php" method="POST">
-                <table>
-                    <tr>
-                        <td>First Name</td>
-                        <td><input type="text" name="fName" /></td>
-                    </tr>
-                    <tr>
-                        <td>Last Name</td>
-                        <td><input type="text" name="lName" /></td>
-                    </tr>
-                    <tr>
-                        <td>Password</td>
-                        <td><input type="password" name="passwd" /></td>
-                    </tr>
-                    <tr>
-                        <td align="center" colspan="2"><input type="submit" /></td>
-                    </tr>
-                </table>
-            </form>
-        </div>
-    </body>
+	<head>
+		<title>Registration Form</title>
+		<link rel="stylesheet" type="text/css" href="style/site.css">
+	</head>
+	<body>
+		<h1>Register</h1>
+		<div class="baseForm">
+			<form action="registerHandler.php" method="POST">
+				<table>
+					<tr>
+						<td>First Name: </td>
+						<td><input type="text" name="userFirst"></td>
+					</tr>
+						<td>Last Name: </td>
+						<td><input type="text" name="userLast"></td>
+					</tr>
+					<tr>
+						<td>UserName: </td>
+						<td><input type="text" name="userName"></td>
+					</tr>
+					<tr>
+						<td>Email: </td>
+						<td><input type="text" name="userEmail"></td>
+					</tr>
+					<tr>
+						<td>Password: </td>
+						<td><input type="password" name="userPass"></td>
+					</tr>
+					<tr>
+						<td>Confirm: </td>
+						<td><input type="password" name="userPass2"></td>
+					</tr>
+					<tr><td colspan="2"> </td></tr>
+					<tr>
+					<td colspan="2" align="center"><input type="submit" value="submit"></td>
+					</tr>
+					<tr>
+						<td colspan="2" align="center"><a href="index.html">Main Menu</a></td>
+					</tr>
+				</table>
+			</form>
+		</div>
+	</body>
 </html>
