comments and such

--- a/cst126_blog/index.html
+++ b/cst126_blog/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
+<!--
+    CST-126 Blog Project 1.0
+    Module - Index Page v1.0
+    Jackie Adair
+    14 April 2019
+    HTML for the index page for this blog.
+-->
 <html>
     <head>
         <title>CST126 Blog Project</title>
+        <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
-        <h2>PHP Blog</h2>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
+        <h1>PHP Blog</h1>
+        <div class="baseForm">
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </div>
 
     </body>
 </html>
