Activity3 refactored dbConnect/php handlers

--- a/activity3/index.html
+++ b/activity3/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
+<!--
+    CST-126 Activity 3
+    T3 Index
+    Jackie Adair
+    20 April 2019
+    
+-->
 <html>
     <head>
-        <title>My Activity 2 Application</title>
+        <title>Activity 3</title>
+        <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
-        <h2>My Activity 2 Application</h2>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
+        <h1>Activity 3</h1>
+        <div class="baseForm">
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </div>
 
     </body>
 </html>
