--- a/activity3/login.html
+++ b/activity3/login.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
+<!--
+    CST-126 Activity 3
+    T3 Index
+    Jackie Adair
+    20 April 2019
+    
+-->
 <html>
     <head>
         <title>Login Form</title>
+        <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
         <h1>Login</h1>
-        <form action="loginHandler.php" method="POST">
-            <table>
-                <tr>
-                    <td>Username:</td>
-                    <td><input type="text" name="userName" /></td>
-                </tr>
-                <tr>
-                    <td>Password:</td>
-                    <td><input type="password" name="userPass" /></td>
-                </tr>
-                <tr>
-                    <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
-                </tr>
-                <tr>
-                        <td colspan="2" align="center"><a href="index.html">Main Menu</a></td>
-                </tr>
-            </table>
-        </form>
-
+        <div class="baseForm">
+            <form action="loginHandler.php" method="POST">
+                <table>
+                    <tr>
+                        <td>Username:</td>
+                        <td><input type="text" name="userName" /></td>
+                    </tr>
+                    <tr>
+                        <td>Password:</td>
+                        <td><input type="password" name="userPass" /></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
+                    </tr>
+                    <tr>
+                            <td colspan="2" align="center"><a href="index.html">Main Menu</a></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
     </body>
 </html>
