Initial Project 3 Commit - Copied from Activity 3, Created new table (posts)

--- a/cst126_blog/login.html
+++ b/cst126_blog/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Blog Project 1.0
-    Module - Login Page v1.0
+    CST-126 Activity 3
+    T3 Index
     Jackie Adair
-    14 April 2019
-    HTML for the login page for this blog.
+    20 April 2019
+    
 -->
 <html>
     <head>
