--- a/cst126_blog/index.html
+++ b/cst126_blog/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Blog Project 1.0
-    Module - Index Page v1.0
+    CST-126 Activity 3
+    T3 Index
     Jackie Adair
-    14 April 2019
-    HTML for the index page for this blog.
+    20 April 2019
+    
 -->
 <html>
     <head>
-        <title>CST126 Blog Project</title>
+        <title>Activity 3</title>
         <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
-        <h1>PHP Blog</h1>
+        <h1>Activity 3</h1>
         <div class="baseForm">
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
