--- a/cst126_blog/register.html
+++ b/cst126_blog/register.html
@@ -1,12 +1,11 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <!--
-    CST-126 Blog Project 1.0
-    Module - Registration Page v2.0
+    CST-126 Activity 3
+    Module - Registration Page v3.0
     Jackie Adair
-    14 April 2019
+    20 April 2019
     HTML for the registration page for this blog.
 -->
-
 <html>
 	<head>
 		<title>Registration Form</title>
