Added create post section.  contains length, badword, and login checks.

--- a/activity3/index.html
+++ b/activity3/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Activity 3
-    T3 Index
+    CST-126 Blog Project 1.0
+    Module - Index v1.0
     Jackie Adair
     20 April 2019
-    
+    HTML for the Index page.
 -->
 <html>
     <head>
-        <title>Activity 3</title>
+        <title>Blog Project</title>
         <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
-        <h1>Activity 3</h1>
+        <h1>Blog Project</h1>
         <div class="baseForm">
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
