--- a/cst126_blog/login.html
+++ b/cst126_blog/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Activity 3
-    T3 Index
+    CST-126 Blog Project 1.0
+    Module - Login v1.0
     Jackie Adair
     20 April 2019
-    
+    HTML for the Login page.
 -->
 <html>
     <head>
