--- a/cst126_blog/index.html
+++ b/cst126_blog/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Activity 3
-    T3 Index
+    CST-126 Blog Project 1.0
+    Module - Index v1.0
     Jackie Adair
     20 April 2019
-    
+    HTML for the Index page.
 -->
 <html>
     <head>
-        <title>Activity 3</title>
+        <title>Blog Project</title>
         <link rel="stylesheet" type="text/css" href="style/site.css">
     </head>
     <body>
-        <h1>Activity 3</h1>
+        <h1>Blog Project</h1>
         <div class="baseForm">
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
+            <a href="login.html">Login</a><br />
+            <a href="register.html">Register</a><br />
+            <a href="createPost.html">Create Post</a><br />
+            <a href="logout.php">Logout</a>
         </div>
 
     </body>
