--- a/cst126_blog/register.html
+++ b/cst126_blog/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-    CST-126 Activity 3
+    CST-126 Blog Project 1.0
     Module - Registration Page v3.0
     Jackie Adair
     20 April 2019
