changed style folder to css and site.css to main.css

--- a/cst126_blog/createPost.html
+++ b/cst126_blog/createPost.html
@@ -9,7 +9,7 @@
 <html>
     <head>
         <title>Create a Blog Post</title>
-        <link rel="stylesheet" type="text/css" href="style/site.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <div class="baseForm">
