--- a/cst126_blog/index.html
+++ b/cst126_blog/index.html
@@ -9,7 +9,7 @@
 <html>
     <head>
         <title>Blog Project</title>
-        <link rel="stylesheet" type="text/css" href="style/site.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <h1>Blog Project</h1>
