--- a/cst126_blog/login.html
+++ b/cst126_blog/login.html
@@ -9,7 +9,7 @@
 <html>
     <head>
         <title>Login Form</title>
-        <link rel="stylesheet" type="text/css" href="style/site.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <h1>Login</h1>
