--- a/cst126_blog/register.html
+++ b/cst126_blog/register.html
@@ -9,7 +9,7 @@
 <html>
 	<head>
 		<title>Registration Form</title>
-		<link rel="stylesheet" type="text/css" href="style/site.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<h1>Register</h1>
