--- a/activity5/makeHTML.html
+++ b/activity5/makeHTML.html
@@ -9,5 +9,7 @@
 <body>
     <a href=makeRequest.php?id=1&mode=0>Link1</a>
     <a href=makeRequest.php?id=2&mode=1>Link2</a>
+    <a href=makeRequest.php?id=newLink&mode=never>New Link1</a>
+    <a href=makeRequest.php?id=newLink2&mod=notNow>New Link2</a>
 </body>
 </html>
